# http-serve-rs

./: Cargo.toml  README.md
src/: main.rs
