[package]
name = "http-serve-rs"
version = "0.1.0"
edition = "2021"
description = "Serve static content from files, like Python's http.server"
license = "MIT"
keywords = ["http", "server", "static"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6"
mime_guess = "2.0.4"
tokio = {version = "1.34", features = ["full"]}
