[package]
name = "http-serve-rs"
authors = ["yunding.eric@gmail.com"]
version = "0.1.0"
edition = "2021"
description = "Serve static content from files, like Python's http.server"
license = "MIT"
keywords = ["http", "server", "static"]
repository = "https://github.com/GeauxEric/http-serve-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.7"
mime_guess = "2.0.4"
tokio = {version = "1.34", features = ["full"]}
tower-http = { version = "0.5", features = ["trace"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
